; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ia64-tdep.c_ia64_convert_from_func_ptr_addr.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ia64-tdep.c_ia64_convert_from_func_ptr_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gdbarch = type { i32 }
%struct.target_ops = type { i32 }
%struct.obj_section = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c".opd\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gdbarch*, i32, %struct.target_ops*)* @ia64_convert_from_func_ptr_addr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ia64_convert_from_func_ptr_addr(%struct.gdbarch* %0, i32 %1, %struct.target_ops* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.gdbarch*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.target_ops*, align 8
  %8 = alloca %struct.obj_section*, align 8
  store %struct.gdbarch* %0, %struct.gdbarch** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.target_ops* %2, %struct.target_ops** %7, align 8
  %9 = load i32, i32* %6, align 4
  %10 = call %struct.obj_section* @find_pc_section(i32 %9)
  store %struct.obj_section* %10, %struct.obj_section** %8, align 8
  %11 = load %struct.obj_section*, %struct.obj_section** %8, align 8
  %12 = icmp ne %struct.obj_section* %11, null
  br i1 %12, label %13, label %24

13:                                               ; preds = %3
  %14 = load %struct.obj_section*, %struct.obj_section** %8, align 8
  %15 = getelementptr inbounds %struct.obj_section, %struct.obj_section* %14, i32 0, i32 0
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i64 @strcmp(i32 %18, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %20 = icmp eq i64 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %13
  %22 = load i32, i32* %6, align 4
  %23 = call i32 @read_memory_unsigned_integer(i32 %22, i32 8)
  store i32 %23, i32* %4, align 4
  br label %26

24:                                               ; preds = %13, %3
  %25 = load i32, i32* %6, align 4
  store i32 %25, i32* %4, align 4
  br label %26

26:                                               ; preds = %24, %21
  %27 = load i32, i32* %4, align 4
  ret i32 %27
}

declare dso_local %struct.obj_section* @find_pc_section(i32) #1

declare dso_local i64 @strcmp(i32, i8*) #1

declare dso_local i32 @read_memory_unsigned_integer(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
